--- a/css/style.css
+++ b/css/style.css
@@ -425,3 +425,20 @@ td,
 th {
   padding: 0;
 }
+body {
+  background-color: LightGray;
+}
+div {
+  border: 1px solid Chocolate;
+} 
+#logo {
+  display: inline;
+  height: 100px;
+  width: 100px;
+  object-fit: contain;
+}
+.list {
+  display: inline;
+  text-align: center;
+}
+
