--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,10 @@
-/*! normalize.css v3.0.2 | MIT License | git.io/normalize */
+html {
+  box-sizing: border-box;
+  *behavior: url(/scripts/boxsizing.htc);
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}/*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 
 /**
  * 1. Set default font family to sans-serif.
@@ -438,9 +444,25 @@ div {
   width: 970px;
   height: 70px;
   margin: 0 auto;
+  padding: 0px 15px;
 }
-.links {
+.top-navigation .links {
   float: right;
-  display: inline-block;
+  font-family: 'Roboto', sans-serif; 
+  font-size: 16px; 
+  color: #838994; 
+  -webkit-font-smoothing: antialiased;
+  margin-top: 25px;
 }
-
+.top-navigation .links li {
+  display: inline-block;
+  margin-left: 25px;
+}
+.top-navigation .links .active{
+  color: #4c5058;
+  font-weight: 500;
+}
+.top-navigation .links li:hover {
+  cursor: pointer;
+  color: #33333;
+}
