--- a/css/style.css
+++ b/css/style.css
@@ -465,7 +465,7 @@ th {
   color: black;  
 }
 .body {
-  background-image: url('..images/first-background.jpg');
+  background-image: url('images/first-background.jpg');
   background-position: center bottom;
   background-repeat: no-repeat;
   background-size: cover; 
