--- a/css/style.css
+++ b/css/style.css
@@ -465,7 +465,7 @@ th {
   color: black;  
 }
 .body {
-  background-image: url('images/first-background.jpg');
+  background-image: url('../images/first-background.jpg');
   background-position: center bottom;
   background-repeat: no-repeat;
   background-size: cover; 
@@ -602,11 +602,4 @@ h6 {
   margin-right: 525px;
   font-family: 'Roboto', sans-serif; 
   -webkit-font-smoothing: antialiased;
-}
-@media only screen and (max-width: 500px) {
-    .page-wrap {
-      paddin: 0;
-      margin: 0;
-
-    }
 }
